完成了基本任务，未完成：依赖关系的分析算法，细节调优。

--- a/src/main/resources/static/pages/rectification/index.html
+++ b/src/main/resources/static/pages/rectification/index.html
@@ -229,7 +229,7 @@
                             <div>
                                 <div class=" box box-primary">
                                     <div class="box-body ">
-                                        <div>
+                                        <div class="textclass">
                                             <img class="img-responsive" src="{{x.imageAPI}}" alt="{{x.imageID}}">
                                         </div>
                                     </div>
