--- a/src/main/resources/static/pages/visualization/index.html
+++ b/src/main/resources/static/pages/visualization/index.html
@@ -27,32 +27,7 @@
     <![endif]-->
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
-<!-- 模态框（Modal）用来显示帮助信息 -->
-<div class="modal fade" id="myModal" tabindex="-222" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog" style="width: 50%">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-                </button>
-                <h4 class="modal-title" id="myModalLabel" style="color:#c12e34; font-weight:blod; ">
-                    使用帮助
-                </h4>
-            </div>
-            <div class="modal-body" id="myModalContent" style="font-family: 黑体">
-                <ol>
-                    <li>首先需要利用API进行“增加一门课程”操作(在“dashboard”中有相关按钮)，或者使用系统里目前已经增加的课程进行操作</li>
-                    <li>按照顺序，执行“录入知识点”，“数据抓取”，“依赖关系分析”，“人工校验”，“最终数据存储到图数据库”</li>
-                    <li>最后，在“图谱可视化测试”中可以看到结果</li>
-                    <li>如果想重新开始构建图谱，在“dashboard”中点击该课程的“讲此门课程的状态重置”</li>
-                </ol>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">关闭
-                </button>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal -->
-</div>
+
 <div class="wrapper">
 
     <header class="main-header">
@@ -72,8 +47,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#" style="font-family: 楷体" data-toggle="modal"
-                           data-target="#myModal"><strong>使用帮助</strong></a></li>
+                    <!--<li><a href="#" style="font-family: 楷体" data-toggle="modal"-->
+                    <!--data-target="#myModal"><strong>使用帮助</strong></a></li>-->
                 </ul>
             </div>
 
@@ -93,7 +68,7 @@
                     <a href="../../index.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
                 </li>
 
-                <li class="treeview active">
+                <li class="treeview ">
                     <a href="#">
                         <i class="fa  fa-th"></i>
                         <span>录入知识点</span>
@@ -102,51 +77,52 @@
             </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="../input/"><i class="fa fa-edit "></i> 录入</a></li>
-                        <li><a href="../input/submit.html"><i class="fa  fa-check-square-o"></i> 录入结束</a></li>
+                        <li><a href="../input/index.html"><i class="fa fa-edit "></i> 录入</a></li>
+                        <li><a href="../input/submit.html"><i class="fa  fa-check-square-o"></i> 录入汇总</a></li>
                     </ul>
                 </li>
 
+
                 <li>
-                    <a href="../spider/">
+                    <a href="../spider/index.html">
                         <i class="fa fa-internet-explorer"></i> <span>数据抓取</span>
                     </a>
                 </li>
                 <li>
-                    <a href="../dependency/">
+                    <a href="../dependency/index.html">
                         <i class="fa fa-cogs"></i> <span>知识点依赖关系分析</span>
                     </a>
                 </li>
                 <li>
-                    <a href="../rectification/">
+                    <a href="../rectification/index.html">
                         <i class="fa  fa-user"></i> <span>人工检验数据</span>
                     </a>
                 </li>
-                <!--         <li class="treeview">
-                          <a href="#">
-                            <i class="fa  fa-user"></i>
-                            <span>人工检验数据</span>
-                            <span class="pull-right-container">
-                              <i class="fa fa-angle-left pull-right"></i>
-                            </span>
-                          </a>
-                          <ul class="treeview-menu">
-                            <li><a href="../rectification/"><i class="fa fa-circle-o"></i> 知识点的分面属性和图片校验</a></li>
-                            <li><a href="../rectification/dependency.html"><i class="fa fa-circle-o"></i> 知识点间的关系校验</a></li>
-                          </ul>
-                        </li> -->
+                <!--
+              <li class="treeview">
+                <a href="#">
+                  <i class="fa  fa-user"></i>
+                  <span>人工检验数据</span>
+                  <span class="pull-right-container">
+                    <i class="fa fa-angle-left pull-right"></i>
+                  </span>
+                </a>
+                <ul class="treeview-menu">
+                  <li><a href="../rectification/"><i class="fa fa-circle-o"></i> 知识点的分面属性和图片校验</a></li>
+                  <li><a href="../rectification/dependency.html"><i class="fa fa-circle-o"></i> 知识点间的关系校验</a></li>
+                </ul>
+              </li> -->
 
-                <li>
-                    <a href="../store/">
-                        <i class="fa fa-database"></i> <span>最终数据存储到图数据库</span>
-                    </a>
-                </li>
+                <!--<li>-->
+                <!--<a href="../store/">-->
+                <!--<i class="fa fa-database"></i> <span>最终数据存储到图数据库</span>-->
+                <!--</a>-->
+                <!--</li>-->
                 <li class="active">
-                    <a href="">
-                        <i class="fa  fa-chrome"></i> <span>图谱可视化测试</span>
+                    <a href="../visualization/index.html">
+                        <i class="fa  fa-chrome"></i> <span>知识图谱可视化预览</span>
                     </a>
                 </li>
-
 
             </ul>
         </section>
@@ -158,9 +134,9 @@
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
-                图谱可视化测试
+                图谱可视化预览
                 <small>
-                    <button class="btn btn-info btn-lg" type="button" ng-click="getClass(nowClassName)">刷新</button>
+                    <button class="btn btn-info btn-sm" type="button" ng-click="getClass()">刷新</button>
                 </small>
             </h1>
             <ol class="breadcrumb">
@@ -171,18 +147,7 @@
 
         <!-- Main content -->
         <section class="content">
-            <div class="row">
-                <div class="col-sm-3 "></div>
-                <div class="col-sm-9 ">
-                    <div class="form-group">
-                        <label class="btn-lg label-primary  ">请选择课程 :</label>
-                        <select class="btn-lg btn-success "
-                                ng-options="x.ClassName for x in ClassList |filter: {Store:'已完成'}"
-                                ng-change="getClass(class.ClassName)" ng-model='class'></select>
 
-                    </div><!-- /btn-group -->
-                </div>
-            </div>
 
             <div id="kg" style="height:600%;width:100%"></div>
 
