完成了该版本所有任务。下一步：gradle+linux测试

--- a/src/main/resources/static/pages/input/submit.html
+++ b/src/main/resources/static/pages/input/submit.html
@@ -242,6 +242,8 @@
 <!-- bootstrap table -->
 <link href="http://cdn.bootcss.com/bootstrap-table/1.11.0/bootstrap-table.css" rel="stylesheet">
 <script src="http://cdn.bootcss.com/bootstrap-table/1.11.0/bootstrap-table.js"></script>
+<script src="http://cdn.bootcss.com/bootstrap-table/1.11.1/locale/bootstrap-table-zh-CN.js"></script>
+
 <script src="http://cdn.bootcss.com/bootstrap-table/1.11.0/extensions/editable/bootstrap-table-editable.js"></script>
 <!--  bootstrap-editable-->
 <link href="http://cdn.bootcss.com/x-editable/1.5.1/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet">
