--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -152,7 +152,7 @@
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
-                Dashboard
+
                 <small>
                     <!--<button class="btn btn-info " type="button"  data-toggle="modal" data-target="#addClass">增加一门课程</button>-->
                 </small>
@@ -170,7 +170,7 @@
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                         </button>
-                        <h4 class="modal-title" id="addClassLabel" style="color:#c12e34; font-weight:blod; ">
+                        <h4 class="modal-title" id="addClassLabel" style="color:#c12e34; font-weight:bold; ">
                             增加一门课程
                         </h4>
                     </div>
@@ -242,7 +242,7 @@
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
 
                     </button>
-                    <h4 class="modal-title" id="myModal1Label" style="color:#c12e34; font-weight:blod; ">
+                    <h4 class="modal-title" id="myModal1Label" style="color:#c12e34; font-weight:bold; ">
 
                     </h4>
                 </div>
