--- a/src/main/resources/static/pages/input/index.html
+++ b/src/main/resources/static/pages/input/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title>知识图谱后台管理</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
@@ -67,7 +68,7 @@
             <ul class="sidebar-menu">
                 <li class="header">主要功能</li>
                 <li>
-                    <a href="../../index.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
+                    <a href="../../index.html"><i class="fa fa-dashboard"></i> <span>欢迎</span></a>
                 </li>
 
                 <li class="treeview active">
