删除提示！还有增加了删除所有的功能

--- a/src/main/resources/static/pages/input/submit.html
+++ b/src/main/resources/static/pages/input/submit.html
@@ -155,10 +155,9 @@
         <!-- Main content -->
         <section class="content">
 
-            <!--<div class="row" id="count">
-              <div class="col-sm-4 "></div>
-              <div class="col-sm-4 "></div>
-            </div>-->
+            <div class="row" style="padding: 10px 30px">
+                <button class="btn btn-danger btn-sm" ng-click="deleteAll()">删除本课程所有数据</button>
+            </div>
             <br>
             <br>
             <br>
